--- a/app/src/main/res/layout/activity_request_status_page.xml
+++ b/app/src/main/res/layout/activity_request_status_page.xml
@@ -6,4 +6,102 @@
     android:layout_height="match_parent"
     tools:context=".RequestStatusPage">
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Real Time Request Result"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="18dp"
+        tools:layout_editor_absoluteY="34dp" />
+
+    <TextView
+        android:id="@+id/textViewPeopleNotified"
+        android:layout_width="75dp"
+        android:layout_height="57dp"
+        android:text="32"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="103dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Notified"
+        android:textColor="@android:color/background_dark"
+        android:textSize="24sp"
+        tools:layout_editor_absoluteX="183dp"
+        tools:layout_editor_absoluteY="119dp" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Accepted"
+        android:textColor="@android:color/background_dark"
+        android:textSize="24sp"
+        tools:layout_editor_absoluteX="183dp"
+        tools:layout_editor_absoluteY="181dp" />
+
+    <TextView
+        android:id="@+id/textViewPeopleDonated"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="(0 have donated before)"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="225dp" />
+
+    <TextView
+        android:id="@+id/textViewPeopleDonated2"
+        android:layout_width="259dp"
+        android:layout_height="48dp"
+        android:text="Please be patient while we connect to more people"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="267dp" />
+
+    <TextView
+        android:id="@+id/textViewPeopleAccepted"
+        android:layout_width="75dp"
+        android:layout_height="53dp"
+        android:text="0"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="172dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="44dp"
+        tools:layout_editor_absoluteY="267dp" />
+
+    <Button
+        android:id="@+id/buttonRefresh"
+        android:layout_width="305dp"
+        android:layout_height="44dp"
+        android:background="@android:color/holo_green_dark"
+        android:text="Refresh Button"
+        android:textColor="@android:color/background_light"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="333dp" />
+
+    <Button
+        android:id="@+id/buttonCloseRequest"
+        android:layout_width="305dp"
+        android:layout_height="44dp"
+        android:background="@android:color/darker_gray"
+        android:text="Close Request"
+        android:textColor="@android:color/background_light"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="388dp" />
+
 </android.support.constraint.ConstraintLayout>
