--- a/app/src/main/res/layout/activity_donor_message_page.xml
+++ b/app/src/main/res/layout/activity_donor_message_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,9 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="330dp"
         android:layout_height="324dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="57dp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="133dp" />
 
@@ -16,10 +19,13 @@
         android:id="@+id/textView5"
         android:layout_width="343dp"
         android:layout_height="85dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
         android:text="Send a Message to Donors"
         android:textColor="@android:color/background_dark"
         android:textSize="30sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="23dp" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
