--- a/app/src/main/res/layout/activity_manual_donation_page.xml
+++ b/app/src/main/res/layout/activity_manual_donation_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +10,12 @@
         android:id="@+id/buttonSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="419dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginRight="41dp"
         android:text="Submit"
         android:textStyle="bold"
         tools:background="@android:color/holo_green_dark"
@@ -21,6 +27,9 @@
         android:id="@+id/textLocation"
         android:layout_width="103dp"
         android:layout_height="33dp"
+        android:layout_above="@+id/textDate"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-194dp"
         android:text="Location"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="28dp"
@@ -31,6 +40,9 @@
         android:id="@+id/textNewDonation"
         android:layout_width="315dp"
         android:layout_height="43dp"
+        android:layout_above="@+id/editDate"
+        android:layout_alignEnd="@+id/buttonSubmit"
+        android:layout_marginBottom="243dp"
         android:text="(+) New Donation"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -42,6 +54,9 @@
         android:id="@+id/textDate"
         android:layout_width="103dp"
         android:layout_height="33dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="194dp"
+        android:layout_toEndOf="@+id/buttonSubmit"
         android:text="Date"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="28dp"
@@ -52,6 +67,12 @@
         android:id="@+id/editDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginBottom="84dp"
         android:ems="10"
         android:inputType="date"
         tools:layout_editor_absoluteX="153dp"
@@ -61,6 +82,9 @@
         android:id="@+id/editLocationEnter"
         android:layout_width="213dp"
         android:layout_height="43dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="178dp"
+        android:layout_toEndOf="@+id/buttonClear"
         android:ems="10"
         android:inputType="text"
         android:text="Donation center name"
@@ -71,8 +95,14 @@
         android:id="@+id/buttonClear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginTop="220dp"
         android:text="Clear"
         tools:layout_editor_absoluteX="77dp"
         tools:layout_editor_absoluteY="386dp" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
