--- a/app/src/main/res/layout/activity_terms_of_use.xml
+++ b/app/src/main/res/layout/activity_terms_of_use.xml
@@ -68,6 +68,6 @@
         android:layout_marginStart="21dp"
         android:layout_marginLeft="21dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/blooddrop" />
+        app:srcCompat="@drawable/blooddrop" />
 
 </RelativeLayout>
