--- a/app/src/main/res/layout/activity_close_request_page.xml
+++ b/app/src/main/res/layout/activity_close_request_page.xml
@@ -30,7 +30,9 @@
         android:text="Back to Request"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="63dp"
-        tools:layout_editor_absoluteY="233dp" />
+        tools:layout_editor_absoluteY="233dp"
+        android:layout_alignLeft="@+id/buttonConfirmClose"
+        android:layout_marginLeft="2dp" />
 
     <Button
         android:id="@+id/buttonConfirmClose"
